# realtime-translate

./: .gitignore  .gitmodules  README.md  SETUP.md
backend/: .env.example  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt.backup
backend/core/: __init__.py  pipeline_manager.py  session_manager.py  state_machine.py
backend/models/: __init__.py  enums.py  messages.py  session.py
backend/services/: __init__.py  stt_service.py  translation_service.py  tts_service.py  vad_service.py
backend/transports/: __init__.py  webrtc_transport.py  websocket_transport.py
backend/utils/: __init__.py  audio_utils.py  logger.py
docs/: audio-debugging-session.md  implementation-plan.md  pipeline-status.md  prd.md
frontend/: .env.example  README.md  UPGRADE_GUIDE.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/components/chat/: ChatFeed.tsx  PartnerMessage.tsx  UserMessage.tsx
frontend/components/layout/: MainLayout.tsx
frontend/components/ui/: AudioVisualizer.tsx  ConnectionToggle.tsx  PTTButton.tsx  SettingsPanel.tsx  ThinkingIndicator.tsx
frontend/hooks/: usePTT.ts  usePipecatClient.ts  useWakeLock.ts  useWebSocket.ts
frontend/lib/: pipecat-client.ts  types.ts
frontend/store/: settings-store.ts  translator-store.ts
